@@ -1,11 +1,10 @@
-package dev.braintrust.agent.instrumentation.openai;
+package dev.braintrust.agent.instrumentation.openai.auto;
 
 import com.google.auto.service.AutoService;
 import dev.braintrust.agent.instrumentation.InstrumentationModule;
 import dev.braintrust.agent.instrumentation.TypeInstrumentation;
-import net.bytebuddy.matcher.ElementMatcher;
+import dev.braintrust.agent.instrumentation.openai.manual.BraintrustOpenAI;
 
-import java.util.Collections;
 import java.util.List;
 
 @AutoService(InstrumentationModule.class)
@@ -16,8 +15,12 @@ public class OpenAIInstrumentationModule extends InstrumentationModule {
     }
 
     @Override
+    public List<String> getHelperClassNames() {
+        return List.of(BraintrustOpenAI.class.getName());
+    }
+
+    @Override
     public List<TypeInstrumentation> typeInstrumentations() {
-        // TODO: add OpenAI type instrumentations
-        return Collections.emptyList();
+        return List.of(new OpenAIOkHttpClientBuilderInstrumentation());
     }
 }
